--- a/packer/Jenkinsfile
+++ b/packer/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('build') {
             steps {
-                echo 'packer build *.json'
+                sh 'packer build *.json'
             }
         }
     }
